spacing fix

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -169,7 +169,8 @@ input, select, textarea {
 	h3 {
 		font-size: 1.25em;
 		line-height: 1.5em;
-		text-transform: uppercase; 
+		text-transform: uppercase;
+		margin: 3em 0 1em 0;
 	}
 
 	h4 {
@@ -334,6 +335,10 @@ input, select, textarea {
 		width: 100%;
 		height: 100%;
 		border: 0;
+	}
+
+	#sound h3 {
+		margin: 0 0 1em 0;
 	}
 
 
@@ -2833,7 +2838,6 @@ input, select, textarea {
 		#main > section > header > h2 { 
 			font-weight: 200;
 		};
-
 
 /* Poptrox */
 
